Closed Bug 78445 Opened 25 years ago Closed 25 years ago

Crash if you close the window during onLoad DOM event.

Categories

(SeaMonkey :: UI Design, defect, P1)

All
Mac System 8.5

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.1

People

(Reporter: bugzilla, Assigned: bugzilla)

References

Details

(Keywords: crash, Whiteboard: [nsbeta1+])

Attachments

(2 files)

The progress dialog used during message compose send or save sometime need to close itsef when it process an onLoad event. The problem is that we start crashing recently when doing that, use to work fine. The crash occurs in DocumentViewerImpl::LoadComplete when calling mPreshell->UnsuppressPainting because the documentViewer object itself has been destroyed! Looks like we need to protect ourself againg "auto-destruction" by adding addref/release in this function. I'll attach a testcase...
Keywords: crash, mailtrack
Save the attachment above as .xul and open it in the browser, yoy will crash. nominating nsbeta1 as this is blocking the landing of the progress dialog in mailnews.
Keywords: nsbeta1
QA Contact: sairuh → jrgm
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.1
nominating nsbeta1 as this is blocking bug 28348. David, if you want, I can take care of it!
Blocks: 28348
Attached patch proposed fix, v1 — — Splinter Review
sr=hyatt
Assignee: hyatt → ducarroz
Status: ASSIGNED → NEW
R=sspitzer
Priority: -- → P1
Whiteboard: [nsbeta1+]
Whiteboard: [nsbeta1+] → [nsbeta1+]Have fix
Fixed and checked in
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Whiteboard: [nsbeta1+]Have fix → [nsbeta1+]
verified win2k: 2001060509 linux: 2001060511 macos: 2001060503
Status: RESOLVED → VERIFIED
Product: Core → Mozilla Application Suite
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: