Fix for bug 78445. Need to addref ourself to avoid potential self destruction while processing the onload event. R=sspitzer, SR=hyatt